[metadata]
name = raspy_auto
version = 1.0.3
author = Daniel Philippus
author_email = daniel@dphilippus.com
description = A HEC-RAS automation library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quantum-dan/raspy
project_urls = 
	Bug Tracker = https://github.com/quantum-dan/raspy/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: Microsoft :: Windows

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6
install_requires = 
	pyrasfile
	pywin32

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

